// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LifelineShape > renders a basic anonymous lifeline 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":50,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":13.5,"width":120,"text":"User","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders a destroyed lifeline with ✕ marker 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":50,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":13.5,"width":120,"text":"User","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[51,431,69,449],"stroke":"#4f46e5","strokeWidth":2.5}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[51,449,69,431],"stroke":"#4f46e5","strokeWidth":2.5}"
  />
</div>
`;

exports[`LifelineShape > renders a lifeline with a CLASS participant (no stereotype) 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":100,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":13.5,"width":120,"text":"UserService","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders a lifeline with a headTopOffset (CREATE event) 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":50,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":80,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":93.5,"width":120,"text":"User","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,120,60,520],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders a lifeline with actor stereotype 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":100,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":6,"width":120,"text":"«actor»","fontSize":10,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"italic","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":20,"width":120,"text":"Admin","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders a lifeline with interface stereotype 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":100,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":6,"width":120,"text":"«interface»","fontSize":10,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"italic","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":20,"width":120,"text":"IAuth","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders a lifeline with object stereotype 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":100,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":6,"width":120,"text":"«object»","fontSize":10,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"italic","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":20,"width":120,"text":"instance","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
</div>
`;

exports[`LifelineShape > renders selected state with cyan outline 1`] = `
<div
  data-konva="Group"
  data-props="{"id":"ll1","x":50,"y":0,"visible":true}"
>
  <div
    data-konva="Rect"
    data-props="{"y":0,"width":120,"height":40,"stroke":"#4f46e5","strokeWidth":1.5,"fill":"#eef2ff","cornerRadius":2}"
  />
  <div
    data-konva="Text"
    data-props="{"x":0,"y":13.5,"width":120,"text":"User","fontSize":13,"fontFamily":"Inter, ui-sans-serif, system-ui, sans-serif","fontStyle":"bold","fill":"#1e293b","align":"center"}"
  />
  <div
    data-konva="Line"
    data-props="{"points":[60,40,60,440],"stroke":"#94a3b8","strokeWidth":1,"dash":[6,4]}"
  />
  <div
    data-konva="Rect"
    data-props="{"x":-2,"y":-2,"width":124,"height":44,"stroke":"#22d3ee","strokeWidth":2,"dash":[4,3]}"
  />
</div>
`;
